--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "method-override": "~1.0.0",
     "morgan": "~1.0.0",
     "serve-favicon": "~2.0.1",
-    "withings-lib": "git://github.com/amida-tech/withings-lib.git"
+    "withings-lib": "git://github.com/amida-tech/withings-lib.git",
+    "connect-livereload": "~0.4.0",
   },
   "devDependencies": {
     "grunt": "~0.4.4",
@@ -56,7 +57,6 @@
     "grunt-open": "~0.2.3",
     "open": "~0.0.4",
     "jshint-stylish": "~0.1.5",
-    "connect-livereload": "~0.4.0",
     "karma-ng-scenario": "~0.1.0",
     "karma-firefox-launcher": "~0.1.3",
     "karma-script-launcher": "~0.1.0",
