--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "morgan": "~1.0.0",
     "serve-favicon": "~2.0.1",
     "withings-lib": "git://github.com/amida-tech/withings-lib.git",
-    "connect-livereload": "~0.4.0",
+    "connect-livereload": "~0.4.0"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
