--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "~1.5.0",
     "composable-middleware": "^0.3.0",
     "compression": "~1.0.1",
+    "connect-livereload": "~0.4.0",
     "connect-mongo": "^0.4.1",
     "cookie-parser": "^1.0.1",
     "errorhandler": "~1.0.0",
@@ -14,10 +15,10 @@
     "jade": "~1.2.0",
     "lodash": "~2.4.1",
     "method-override": "~1.0.0",
+    "moment": "^2.10.3",
     "morgan": "~1.0.0",
     "serve-favicon": "~2.0.1",
-    "withings-lib": "git://github.com/amida-tech/withings-lib.git",
-    "connect-livereload": "~0.4.0"
+    "withings-lib": "git://github.com/amida-tech/withings-lib.git"
   },
   "devDependencies": {
     "grunt": "~0.4.4",
