--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "server/app.js",
   "dependencies": {
     "body-parser": "~1.5.0",
+    "bower": "^1.5.2",
     "composable-middleware": "^0.3.0",
     "compression": "~1.0.1",
     "connect-livereload": "~0.4.0",
